# ansari

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  checker_request.md  feature_request.md
.github/workflows/: ci.yml
ansari/: __init__.py  main.py  models.py
ansari/core/: __init__.py  config.py
ansari/modules/: __init__.py  reliability_checker.py  resource_checker.py
ansari/modules/checkers/: __init__.py  base.py  database.py  kubernetes.py  terraform.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/db/: __init__.py  init_db.py  models.py  session.py
backend/app/knowledge/: __init__.py
backend/app/llm/: __init__.py
backend/tests/: test_health.py
examples/: custom_checker.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
tests/: test_cli.py  test_examples.py  test_reliability_checker.py
tests/checkers/: test_database.py  test_kubernetes.py  test_registry.py  test_terraform.py
widget/: demo.html  widget.css  widget.js
