[tool.poetry]
name = "ansari"
version = "0.1.0"
description = "Automated Navigator for Service Alerts and Resource Incidents"
authors = ["Sameer Alam <sameeralam3127@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"  # Beautiful CLI
rich = "^13.0.0"                                # Terminal formatting
pydantic = "^2.0.0"                            # Data validation
click = ">=8.0,<8.2"                           # Compatible Typer CLI runtime

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
ansari = "ansari.main:app"                      # This makes 'ansari' a command

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
