[tool.poetry]
name = "ansari"
version = "0.1.1"
description = "Advanced Network SRE & Automated Remediation Interface"
authors = ["Sameer Alam <sameeralam3127@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "ansari" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
click = ">=8.0,<8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.11.0"

[tool.poetry.scripts]
ansari = "ansari.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
