[project]
name = "ansari"
version = "1.1.1"
description = "Advanced Network SRE & Automated Remediation Interface"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sameer Alam", email = "sameeralam3127@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0,<0.10.0",
    "rich>=13.0.0,<14.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "click>=8.0,<8.2",
    "pyfiglet>=1.0.0",
]

[project.scripts]
ansari = "ansari.main:app"

[dependency-groups]
dev = ["pytest>=8.0.0,<9.0.0", "ruff>=0.11.0,<0.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ansari"]
