[project]
name = "ansari-backend"
version = "0.1.0"
description = "ANSARI backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pgvector>=0.3.6",
    "pydantic-settings>=2.5.0,<3.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0,<9.0.0", "ruff>=0.11.0,<0.12.0", "httpx>=0.27.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
